--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~5.0"
     },
     "autoload": {
         "psr-4": {
